# tap-wrapper

./: README.md  ToDo.md
demo/: tap_md.py  tap_td.py
tap/: meson.build  wrapper.py
tap/api/: __init__.py  tap_td_common_struct.py  tap_td_data_constant.py  tap_td_data_struct.py  tap_td_data_typedef.py  tap_td_error_constant.py  tapmd.pyi  taptd.pyi
tap/generator/: gen.py  gen_api_commdef.py  gen_api_error.py  gen_api_functions.py  gen_data_type.py
tap/generator/templates/: tap_header.j2  tap_source.j2
tap/interface/: mdapi.i  tdapi.i
tap/v/: tap.h
tap/v/v9.3.8/include/: iTapAPIError.h  iTapTradeAPI.h  iTapTradeAPIDataType.h
tap/v/v9.3.8/src/tapmd/: tapmd.cpp  tapmd.h
tap/v/v9.3.8/src/taptd/: taptd.cpp  taptd.h
